(1.3.22) Metabolizer endpoint added to swagger api docs.
